--- a/www/views/welcome.pug
+++ b/www/views/welcome.pug
@@ -21,6 +21,9 @@ html(lang="en")
               .menu-item.text-center.text-white.my-3#profile
                 i.fas.fa-user.fa-2x
                 p.menu-text Profile
+              .menu-item.text-center.text-white.my-3.p-3#subOrds
+                i.fas.fa-users.fa-2x
+                p.menu-text Subordinates
               .menu-item.text-center.text-white.my-3#myReport
                 i.fas.fa-file-alt.fa-2x
                 p.menu-text My Report
